syntax = "proto2";

import "connect.proto";

message CapabilityRequest {
    required bytes requester_identity = 1;
    required bytes invoker_identity = 2;
    required bytes service_identity = 3;

    required string service_address = 4;
    required string service_port = 5;
    repeated Parameter parameters = 6;

    required uint32 requestid = 7;
}

message Capability {
    required bytes identity = 1;
    required bytes service = 2;
    required uint32 requestid = 3;
    required CapabilityMessage capability = 4;
}
